test/semantic_errors/invalid_arrayindex2.mc
void main() {
    int a[2];
    int b;
    bool i;
    b = a[i];
}